better api docs with huma
